# Jarvis

./: .gitignore  README.md  alembic.ini  pyproject.toml  setup.py
alembic/: env.py
alembic/versions/: 001_initial.py  002_create_conversations_table.py  003_create_messages_table.py
src/: __init__.py  main.py
src/api/routes/: auth.py  chat.py
src/config/: settings.py
src/core/: security.py
src/database/: conversation.py  session.py
src/models/: chat.py  user.py
src/models/database/: base.py  conversation.py  user.py
src/services/: llm.py  llm_service.py  memory_service.py
tests/: test_basic.py  test_chat.py
