[tool.poetry]
name = "jarvis-ai"
version = "0.1.0"
description = "A personal AI assistant with memory capabilities"
authors = ["Your Name <narendra.nareda.72@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.2.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.4"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
langchain = "^0.3.22"
huggingface-hub = "^0.30.1"
transformers = "^4.50.3"
torch = "^2.6.0"
sqlalchemy = "^2.0"
alembic = "^1.15.2"
python-jose = "^3.3"
passlib = "^1.7"
chromadb = "^0.6.3"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
asyncpg = "^0.30.0"
langchain-community = "^0.3.20"
aiosqlite = "^0.21.0"
email-validator = "^2.2.0"
accelerate = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.10"
isort = "^5.12"
flake8 = "^6.1"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 
